--- a/Web/Pages/Shared/_Layout.cshtml
+++ b/Web/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -24,6 +24,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/Quiz/Item" asp-route-itemId="1" asp-route-quizId="1">Quiz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="/QuizList">Quizzes</a>
                     </li>
                 </ul>
             </div>
